--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "nedb": "^1.8.0",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "ejs": "0.8.5",    
   }
 }
