add storing data to database feature

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   "homepage": "https://github.com/nwjun/atm-status#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ejs": "0.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.2.10",
+    "firebase-admin": "^9.5.0",
     "nedb": "^1.8.0",
-    "pg": "^8.5.1",
-    "ejs": "0.8.5"    
+    "pg": "^8.5.1"
   }
 }
