--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "firebase": "^8.2.10",
     "firebase-admin": "^9.5.0",
+    "mailgun-js": "^0.22.0",
     "nedb": "^1.8.0",
     "pg": "^8.5.1"
   }
